v2.11.0/_sources/plugins/endpoint_analytics_profiling_rules_bulk_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk module -- Resource module for Endpoint Analytics Profiling Rules Bulk
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.11.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 2.11.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation create of the resource Endpoint Analytics Profiling Rules Bulk.
- This API imports the given list of profiling rules. For each record,.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.2.3.0.0
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.6.0"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules:

      .. rst-class:: ansible-option-title

      **profilingRules**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's profilingRules.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/clusterId"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/clusterid:

      .. rst-class:: ansible-option-title

      **clusterId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/clusterId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Unique identifier for ML cluster. Only applicable for 'ML Rule'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups:

      .. rst-class:: ansible-option-title

      **conditionGroups**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's conditionGroups.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/condition"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/condition:

      .. rst-class:: ansible-option-title

      **condition**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/condition" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's condition.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/condition/attribute"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/condition/attribute:

      .. rst-class:: ansible-option-title

      **attribute**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/condition/attribute" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's attribute.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/condition/attributeDictionary"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/condition/attributedictionary:

      .. rst-class:: ansible-option-title

      **attributeDictionary**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/condition/attributeDictionary" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's attributeDictionary.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/condition/operator"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/condition/operator:

      .. rst-class:: ansible-option-title

      **operator**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/condition/operator" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's operator.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/condition/value"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/condition/value:

      .. rst-class:: ansible-option-title

      **value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/condition/value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's value.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/conditionGroup"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/conditiongroup:

      .. rst-class:: ansible-option-title

      **conditionGroup**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/conditionGroup" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's conditionGroup.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/operator"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/operator:

      .. rst-class:: ansible-option-title

      **operator**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/operator" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's operator.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/conditionGroups/type"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/conditiongroups/type:

      .. rst-class:: ansible-option-title

      **type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/conditionGroups/type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's type.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/isDeleted"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/isdeleted:

      .. rst-class:: ansible-option-title

      **isDeleted**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/isDeleted" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Flag to indicate whether the rule was deleted.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/lastModifiedBy"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/lastmodifiedby:

      .. rst-class:: ansible-option-title

      **lastModifiedBy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/lastModifiedBy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      User that last modified the rule. It is read-only, and is ignored if provided as part of input request.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/lastModifiedOn"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/lastmodifiedon:

      .. rst-class:: ansible-option-title

      **lastModifiedOn**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/lastModifiedOn" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Timestamp (in epoch milliseconds) of last modification. It is read-only, and is ignored if provided as part of input request.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/pluginId"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/pluginid:

      .. rst-class:: ansible-option-title

      **pluginId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/pluginId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Plugin for the rule. Only applicable for 'Cisco Default' rules.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/rejected"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/rejected:

      .. rst-class:: ansible-option-title

      **rejected**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/rejected" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Flag to indicate whether rule has been rejected by user or not. Only applicable for 'ML Rule'.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/result"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/result:

      .. rst-class:: ansible-option-title

      **result**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/result" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Endpoint Analytics Profiling Rules Bulk's result.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/result/deviceType"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/result/devicetype:

      .. rst-class:: ansible-option-title

      **deviceType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/result/deviceType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of device types determined by the current rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/result/hardwareManufacturer"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/result/hardwaremanufacturer:

      .. rst-class:: ansible-option-title

      **hardwareManufacturer**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/result/hardwareManufacturer" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of hardware manufacturers determined by the current rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/result/hardwareModel"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/result/hardwaremodel:

      .. rst-class:: ansible-option-title

      **hardwareModel**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/result/hardwareModel" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of hardware models determined by the current rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/result/operatingSystem"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/result/operatingsystem:

      .. rst-class:: ansible-option-title

      **operatingSystem**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/result/operatingSystem" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of operating systems determined by the current rule.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/ruleId"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/ruleid:

      .. rst-class:: ansible-option-title

      **ruleId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/ruleId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Unique identifier for the rule. This is normally generated by the system, and client does not need to provide it for rules that need to be newly created.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/ruleName"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/rulename:

      .. rst-class:: ansible-option-title

      **ruleName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/ruleName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Human readable name for the rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/rulePriority"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/rulepriority:

      .. rst-class:: ansible-option-title

      **rulePriority**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/rulePriority" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Priority for the rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/ruleType"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/ruletype:

      .. rst-class:: ansible-option-title

      **ruleType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/ruleType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Type of the rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/ruleVersion"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/ruleversion:

      .. rst-class:: ansible-option-title

      **ruleVersion**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/ruleVersion" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Version of the rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/sourcePriority"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/sourcepriority:

      .. rst-class:: ansible-option-title

      **sourcePriority**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/sourcePriority" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Source priority for the rule.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-profilingRules/usedAttributes"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-profilingrules/usedattributes:

      .. rst-class:: ansible-option-title

      **usedAttributes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-profilingRules/usedAttributes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of attributes used in the rule. Only applicable for 'Cisco Default' rules.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are ai\_endpoint\_analytics.AIEndpointAnalytics.import\_profiling\_rules\_in\_bulk,
   - Paths used are post /dna/intent/api/v1/endpoint-analytics/profiling-rules/bulk,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK
   - Requires Python \>= 3.10, matching the controller Python versions supported by the collection's minimum ansible-core version (see the collection README for the current ansible-core / Python compatibility range)

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Create
      cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        profilingRules:
          - clusterId: string
            conditionGroups:
              condition:
                attribute: string
                attributeDictionary: string
                operator: string
                value: string
              conditionGroup:
                - string
              operator: string
              type: string
            isDeleted: true
            lastModifiedBy: string
            lastModifiedOn: 0
            pluginId: string
            rejected: true
            result:
              deviceType:
                - string
              hardwareManufacturer:
                - string
              hardwareModel:
                - string
              operatingSystem:
                - string
            ruleId: string
            ruleName: string
            rulePriority: 0
            ruleType: string
            ruleVersion: 0
            sourcePriority: 0
            usedAttributes:
              - string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.endpoint_analytics_profiling_rules_bulk_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Bryan Vargas (@bvargasre)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

